[gd_scene load_steps=5 format=3 uid="uid://cp8hh1m82romq"]

[ext_resource type="PackedScene" uid="uid://64vfb50e11fg" path="res://scenes/base.tscn" id="1_4j7nb"]
[ext_resource type="Script" path="res://scenes/level.gd" id="1_sa7op"]
[ext_resource type="PackedScene" uid="uid://dxf1150ogdrm3" path="res://town.tscn" id="3_0c4xq"]

[sub_resource type="Curve2D" id="Curve2D_b00gr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 600, 0)
}
point_count = 2

[node name="Level" type="Node2D"]
script = ExtResource("1_sa7op")

[node name="Base" parent="." instance=ExtResource("1_4j7nb")]
position = Vector2(30, 379)

[node name="Base2" parent="." instance=ExtResource("1_4j7nb")]
position = Vector2(300, 380)

[node name="Base3" parent="." instance=ExtResource("1_4j7nb")]
position = Vector2(570, 380)

[node name="town" parent="." instance=ExtResource("3_0c4xq")]
position = Vector2(120, 380)

[node name="town2" parent="." instance=ExtResource("3_0c4xq")]
position = Vector2(210, 380)

[node name="town3" parent="." instance=ExtResource("3_0c4xq")]
position = Vector2(390, 380)

[node name="town4" parent="." instance=ExtResource("3_0c4xq")]
position = Vector2(480, 380)

[node name="MissilePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_b00gr")

[node name="MissileSpawnLocation" type="PathFollow2D" parent="MissilePath"]

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="MissileTimer" to="." method="_on_missile_timer_timeout"]
